--- a/assignment/week-03/W03-assignment.ipynb
+++ b/assignment/week-03/W03-assignment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -184,12 +184,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "손흥민님께서 가입하셨습니다. (2020-09-18 00:44:45)\n",
-      "김연아님께서 가입하셨습니다. (2020-09-18 00:44:45)\n",
-      "박찬호님께서 가입하셨습니다. (2020-09-18 00:44:45)\n",
-      "김연경님께서 가입하셨습니다. (2020-09-18 00:44:45)\n",
-      "박세리님께서 가입하셨습니다. (2020-09-18 00:44:45)\n",
-      "류현진님께서 가입하셨습니다. (2020-09-18 00:44:45)\n"
+      "손흥민님께서 가입하셨습니다. (2020-09-18 00:45:31)\n",
+      "김연아님께서 가입하셨습니다. (2020-09-18 00:45:31)\n",
+      "박찬호님께서 가입하셨습니다. (2020-09-18 00:45:31)\n",
+      "김연경님께서 가입하셨습니다. (2020-09-18 00:45:31)\n",
+      "박세리님께서 가입하셨습니다. (2020-09-18 00:45:31)\n",
+      "류현진님께서 가입하셨습니다. (2020-09-18 00:45:31)\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -221,12 +221,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "아이디:0, 이름:손흥민, 가입일:2020-09-18 00:44:45\n",
-      "아이디:1, 이름:김연아, 가입일:2020-09-18 00:44:45\n",
-      "아이디:2, 이름:박찬호, 가입일:2020-09-18 00:44:45\n",
-      "아이디:3, 이름:김연경, 가입일:2020-09-18 00:44:45\n",
-      "아이디:4, 이름:박세리, 가입일:2020-09-18 00:44:45\n",
-      "아이디:5, 이름:류현진, 가입일:2020-09-18 00:44:45\n"
+      "아이디:0, 이름:손흥민, 가입일:2020-09-18 00:45:31\n",
+      "아이디:1, 이름:김연아, 가입일:2020-09-18 00:45:31\n",
+      "아이디:2, 이름:박찬호, 가입일:2020-09-18 00:45:31\n",
+      "아이디:3, 이름:김연경, 가입일:2020-09-18 00:45:31\n",
+      "아이디:4, 이름:박세리, 가입일:2020-09-18 00:45:31\n",
+      "아이디:5, 이름:류현진, 가입일:2020-09-18 00:45:31\n"
      ]
     }
    ],
@@ -243,27 +243,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'손흥민'님께서 포스팅했습니다: 안녕하세요! 연스타그램 너무 좋네요! (2020-09-18 00:44:45)\n",
-      "'손흥민'님께서 포스팅했습니다: 두번째 포스팅입니다 ㅎㅎㅎ (2020-09-18 00:44:45)\n",
-      "'김연아'님께서 포스팅했습니다: 안녕하세요 처음뵙겠습니다! (2020-09-18 00:44:45)\n",
-      "'박찬호'님께서 포스팅했습니다: Hello! This app is awesome! (2020-09-18 00:44:45)\n",
-      "'김연경'님께서 포스팅했습니다: 수익모델이 뭔가요? (2020-09-18 00:44:45)\n"
+      "'손흥민'님께서 포스팅했습니다: 안녕하세요! 연스타그램 너무 좋네요! (2020-09-18 00:45:31)\n",
+      "'손흥민'님께서 포스팅했습니다: 두번째 포스팅입니다 ㅎㅎㅎ (2020-09-18 00:45:31)\n",
+      "'김연아'님께서 포스팅했습니다: 안녕하세요 처음뵙겠습니다! (2020-09-18 00:45:31)\n",
+      "'박찬호'님께서 포스팅했습니다: Hello! This app is awesome! (2020-09-18 00:45:31)\n",
+      "'김연경'님께서 포스팅했습니다: 수익모델이 뭔가요? (2020-09-18 00:45:31)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Post at 0x7fba836a2f98>"
+       "<__main__.Post at 0x7fb32cead940>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -298,11 +298,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'박세리'님이 '손흥민'님의 포스트를 좋아합니다 (2020-09-18 00:44:45)\n",
-      "\n",
-      "'류현진'님 외 1명이 포스트를 좋아합니다 (2020-09-18 00:44:45)\n",
-      "\n"
+      "'박세리'님이 '손흥민'님의 포스트를 좋아합니다 (2020-09-18 00:45:31)\n",
+      "'류현진'님 외 1명이 포스트를 좋아합니다 (2020-09-18 00:45:31)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Like at 0x7fb32cead1d0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -339,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'김연경'님 외 2명이 포스트를 좋아합니다 (2020-09-18 00:44:45)\n",
+      "'김연경'님 외 2명이 포스트를 좋아합니다 (2020-09-18 00:45:31)\n",
       "\n"
      ]
     }
@@ -399,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
