--- a/assignment/week-05/W05-assignment.ipynb
+++ b/assignment/week-05/W05-assignment.ipynb
@@ -500,105 +500,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group D</td>\n",
-       "      <td>some high school</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>97</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group E</td>\n",
-       "      <td>bachelor's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>99</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>903</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group D</td>\n",
-       "      <td>bachelor's degree</td>\n",
-       "      <td>free/reduced</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>93</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>403</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group D</td>\n",
-       "      <td>high school</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>88</td>\n",
-       "      <td>99</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>458</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group E</td>\n",
-       "      <td>bachelor's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>957</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group D</td>\n",
-       "      <td>master's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>92</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>962</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group E</td>\n",
-       "      <td>associate's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>970</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group D</td>\n",
-       "      <td>bachelor's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>89</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>165</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group C</td>\n",
-       "      <td>bachelor's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>96</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>916</th>\n",
        "      <td>male</td>\n",
        "      <td>group E</td>\n",
@@ -609,34 +510,133 @@
        "      <td>100</td>\n",
        "      <td>100</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>625</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>100</td>\n",
+       "      <td>97</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>87</td>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>91</td>\n",
+       "      <td>89</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>571</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>91</td>\n",
+       "      <td>96</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>96</td>\n",
+       "      <td>90</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>864</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>97</td>\n",
+       "      <td>93</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>612</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>94</td>\n",
+       "      <td>90</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>919</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>91</td>\n",
+       "      <td>96</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     gender race_ethnicity parental_level_of_education         lunch  \\\n",
-       "179  female        group D            some high school      standard   \n",
-       "114  female        group E           bachelor's degree      standard   \n",
-       "903  female        group D           bachelor's degree  free/reduced   \n",
-       "403  female        group D                 high school      standard   \n",
-       "458  female        group E           bachelor's degree      standard   \n",
-       "957  female        group D             master's degree      standard   \n",
-       "962  female        group E          associate's degree      standard   \n",
-       "970  female        group D           bachelor's degree      standard   \n",
-       "165  female        group C           bachelor's degree      standard   \n",
-       "916    male        group E           bachelor's degree      standard   \n",
+       "    gender race_ethnicity parental_level_of_education         lunch  \\\n",
+       "916   male        group E           bachelor's degree      standard   \n",
+       "625   male        group D                some college      standard   \n",
+       "381   male        group C          associate's degree      standard   \n",
+       "149   male        group E          associate's degree  free/reduced   \n",
+       "121   male        group B          associate's degree      standard   \n",
+       "571   male        group A           bachelor's degree      standard   \n",
+       "562   male        group C           bachelor's degree      standard   \n",
+       "864   male        group C          associate's degree      standard   \n",
+       "612   male        group C           bachelor's degree      standard   \n",
+       "919   male        group B                some college      standard   \n",
        "\n",
        "    test_preparation_course  math_score  reading_score  writing_score  \n",
-       "179               completed          97            100            100  \n",
-       "114               completed          99            100            100  \n",
-       "903               completed          93            100            100  \n",
-       "403               completed          88             99            100  \n",
-       "458                    none         100            100            100  \n",
-       "957                    none          92            100            100  \n",
-       "962                    none         100            100            100  \n",
-       "970                    none          89            100            100  \n",
-       "165               completed          96            100            100  \n",
-       "916               completed         100            100            100  "
+       "916               completed         100            100            100  \n",
+       "625               completed         100             97             99  \n",
+       "381               completed          87            100             95  \n",
+       "149               completed         100            100             93  \n",
+       "121               completed          91             89             92  \n",
+       "571                    none          91             96             92  \n",
+       "562               completed          96             90             92  \n",
+       "864                    none          97             93             91  \n",
+       "612               completed          94             90             91  \n",
+       "919               completed          91             96             91  "
       ]
      },
      "execution_count": 12,
