--- a/practice/week-10/W10_3_anomaly_detection_application.ipynb
+++ b/practice/week-10/W10_3_anomaly_detection_application.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# df = pd.read_csv('credit2.csv')\n",
-    "df = pd.read_csv('creditcard.csv')"
+    "df = pd.read_csv('credit.csv')"
    ]
   },
   {
@@ -50,8 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.head()\n",
-    "# df.drop(labels=[\"Unnamed: 0\"],axis=1,inplace=True)"
+    "df.head()\n"
    ]
   },
   {
@@ -232,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1= df.sample(frac = 0.4,random_state=1)\n",
+    "data1= df.sample(frac = 1,random_state=42)\n",
     "\n",
     "data1.shape"
    ]
@@ -333,12 +332,11 @@
     "# Filter the columns to remove data we do not want \n",
     "columns = [c for c in columns if c not in [\"Class\"]]\n",
     "# columns = correlation_matrix['Class'].abs().sort_values()[-6:-1].keys()\n",
-    "columns = [\"V14\",\"V17\"]\n",
+    "columns = [\"V14\",\"V17\",\"V12\"]\n",
     "print(columns)\n",
     "# Store the variable we are predicting \n",
     "target = \"Class\"\n",
     "# Define a random state \n",
-    "state = np.random.RandomState(42)\n",
     "X = data1[columns].values\n",
     "y = data1[target].values\n",
     "\n",
@@ -355,8 +353,8 @@
    "source": [
     "normal = y==0\n",
     "fraud  = y==1\n",
-    "plt.scatter(X[normal, 0], X[normal, 1], s=10, color='b',alpha=0.1)\n",
-    "plt.scatter(X[fraud, 0], X[fraud, 1], s=10, color='r',alpha=0.5)"
+    "plt.scatter(X[normal, columns.index(\"V14\")], X[normal, columns.index(\"V17\")], s=10, color='b',alpha=0.1)\n",
+    "plt.scatter(X[fraud, columns.index(\"V14\")], X[fraud, columns.index(\"V17\")], s=10, color='r',alpha=0.5)"
    ]
   },
   {
@@ -406,9 +404,8 @@
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "# X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, random_state=1)\n",
-    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.3, random_state=42)\n",
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.4, random_state=42)\n",
     "\n",
-    "sss.get_n_splits(X, y)\n",
     "for train_index, test_index in sss.split(X, y):\n",
     "    X_train, X_test = X[train_index], X[test_index]\n",
     "    y_train, y_test = y[train_index], y[test_index]\n"
@@ -437,14 +434,10 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "    \n",
-    "model = LogisticRegression(max_iter=1000)\n",
+    "model = LogisticRegression(max_iter=1000,random_state=42)\n",
     "model.fit(X_train,y_train)\n",
     "y_pred = model.predict(X_test)\n",
-    "print(y_pred)\n",
     "\n",
-    "n_errors = (y_pred != y_test).sum()\n",
-    "n_outliers = (y_pred == 1).sum()\n",
-    "n_fraud = (y== 1).sum()\n",
     "print(accuracy_score(y_test,y_pred))\n",
     "print(classification_report(y_test,y_pred))\n",
     "print(confusion_matrix(y_test, y_pred))"
@@ -463,7 +456,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = IsolationForest(contamination=outlier_fraction,random_state=state)\n",
+    "train_normal = X_train[y_train==0]\n",
+    "train_outliers = X_train[y_train==1] \n",
+    "outlier_prop = len(train_outliers) / len(X_train) \n",
+    "print(outlier_prop)\n",
+    "\n",
+    "clf = IsolationForest(contamination=0.0015,random_state=42)\n",
     "clf.fit(X_train)\n",
     "y_pred = clf.predict(X_test)\n",
     "\n",
@@ -494,8 +492,9 @@
     "   \n",
     "train_normal = X_train[y_train==0]\n",
     "train_outliers = X_train[y_train==1] \n",
-    "outlier_prop = len(train_outliers) / len(train_normal) \n",
-    "svm = OneClassSVM(kernel='rbf',nu=0.001, gamma=0.02,verbose=True) \n",
+    "\n",
+    "\n",
+    "svm = OneClassSVM(kernel='rbf',nu=0.00095, gamma=0.002,verbose=True) \n",
     "svm.fit(train_normal)\n",
     "\n",
     "y_pred = svm.predict(X_test) \n",
@@ -506,20 +505,6 @@
     "print(classification_report(y_test,y_pred))\n",
     "print(confusion_matrix(y_test, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -545,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
