--- a/practice/week-11/W11_1_time_series_analysis_basic.ipynb
+++ b/practice/week-11/W11_1_time_series_analysis_basic.ipynb
@@ -13,6 +13,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: statsmodels in /opt/anaconda3/lib/python3.7/site-packages (0.11.0)\n",
+      "Requirement already satisfied: scipy>=1.0 in /opt/anaconda3/lib/python3.7/site-packages (from statsmodels) (1.4.1)\n",
+      "Requirement already satisfied: pandas>=0.21 in /opt/anaconda3/lib/python3.7/site-packages (from statsmodels) (1.0.1)\n",
+      "Requirement already satisfied: numpy>=1.14 in /opt/anaconda3/lib/python3.7/site-packages (from statsmodels) (1.18.5)\n",
+      "Requirement already satisfied: patsy>=0.5 in /opt/anaconda3/lib/python3.7/site-packages (from statsmodels) (0.5.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /opt/anaconda3/lib/python3.7/site-packages (from pandas>=0.21->statsmodels) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /opt/anaconda3/lib/python3.7/site-packages (from pandas>=0.21->statsmodels) (2019.3)\n",
+      "Requirement already satisfied: six in /opt/anaconda3/lib/python3.7/site-packages (from patsy>=0.5->statsmodels) (1.15.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install statsmodels"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
